<?xml version="1.0"?>
<package format="2">
  <name>headset_teleoperation</name>
  <version>0.0.0</version>
  <description>The headset_teleoperation package</description>
  <maintainer email="fake@email.com">Ian Chuang</maintainer>
  <license>BSD</license>
  <author email="fake@email.com">Ian Chuang</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interbotix_xs_msgs</build_depend>
  <build_depend>interbotix_xsarm_control</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser_py</build_depend>

  <build_export_depend>interbotix_xs_msgs</build_export_depend>
  <build_export_depend>interbotix_xsarm_control</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>kdl_parser_py</build_export_depend>

  <exec_depend>interbotix_xs_msgs</exec_depend>
  <exec_depend>interbotix_xsarm_control</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kdl_parser_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
